Cleaned repo : removed secrets and large files

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,4 @@ PORT=3000
 
        REACT_APP_API_ENDPOINT="/random-hero"
 	   BACKEND_URL=
-		"https://korean-history-api-g7auebfdhhd6fpb5.koreacentral-01.azurewebsites.net"
+		"your_backend_url"
