키 제거 및 환경변수화 완료료

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,12 @@
 PORT=3000
 
-# API_KEYS:
-		VISION=
-			your_openapi_key_here, // 예: process.env.REACT_APP_VISION_API_KEY
-		RAG= your_openapi_key_here, // 예: process.env.REACT_APP_RAG_API_KEY
-		SPEECH=
-			your_openapi_key_here, // 예: process.env.REACT_APP_SPEECH_API_KEY
-	
-	# API_ENDPOINTS: 
-		end_VISION=
-			your_api_endpoint_here, // 예: "https://<your-resource>.openai.azure.com/openai/deployments/gpt-4o-2/chat/completions?api-version=2024-02-15-preview"
-		end_RAG= your_api_endpoint_here, // 예: "https://<your-resource>.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-02-15-preview"
-		end_SPEECH_TTS= "", // 리전은 필요시 변경
+REACT_APP_VISION_API_KEY=your_vision_api_key_here
+REACT_APP_RAG_API_KEY=your_rag_api_key_here
+REACT_APP_SPEECH_API_KEY=your_speech_api_key_here
 
-       REACT_APP_API_ENDPOINT="/random-hero"
-	   BACKEND_URL=
-		"your_backend_url"
+REACT_APP_ENDPOINT_VISION=https://your-vision-endpoint-url
+REACT_APP_ENDPOINT_RAG=https://your-rag-endpoint-url
+REACT_APP_ENDPOINT_SPEECH_TTS=https://your-speech-tts-url
+
+REACT_APP_API_ENDPOINT=/random-hero
+REACT_APP_BACKEND_URL=https://your-backend-url
